{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 30,
  "lineage": "317cfc82-25ed-4c12-48d1-55fbb4aa63a3",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "public_ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/publicIPAddresses/arnab-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.97.252.36",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "arnab-public-ip",
            "resource_group_name": "arnabrg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "arnab-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/networkInterfaces/arnab-network-interface",
            "internal_domain_name_suffix": "cdgvauyrpoxeldr54v4vx30dze.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/publicIPAddresses/arnab-public-ip",
                "subnet_id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn/subnets/arnab-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-8A-9E-45",
            "name": "arnab-network-interface",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "arnabrg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Compute/virtualMachines/arnab-azure-vm"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.arnabrg",
            "azurerm_subnet.arnab-snet",
            "azurerm_virtual_network.arnab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "arnab-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/networkSecurityGroups/arnab-netsg",
            "location": "westeurope",
            "name": "arnab-netsg",
            "resource_group_name": "arnabrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "arnab-security-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom22Inbound",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arnabrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "arnab-srule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/networkSecurityGroups/arnab-netsg/securityRules/arnab-security-rule",
            "name": "arnab-security-rule",
            "network_security_group_name": "arnab-netsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "arnabrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.arnab-nsg",
            "azurerm_resource_group.arnabrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/publicIPAddresses/arnab-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.97.252.36",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "arnab-public-ip",
            "resource_group_name": "arnabrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.arnabrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "arnab-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn/subnets/arnab-subnet",
            "name": "arnab-subnet",
            "resource_group_name": "arnabrg",
            "virtual_network_name": "arnabvn"
          },
          "dependencies": [
            "azurerm_resource_group.arnabrg",
            "azurerm_virtual_network.arnab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "arnab-nsg-assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn/subnets/arnab-subnet",
            "network_security_group_id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/networkSecurityGroups/arnab-netsg",
            "subnet_id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn/subnets/arnab-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.arnab-nsg",
            "azurerm_resource_group.arnabrg",
            "azurerm_subnet.arnab-snet",
            "azurerm_virtual_network.arnab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "arnab-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5350cd10-7b11-45ae-8e3f-f57d5bf743cc",
            "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn",
            "location": "westeurope",
            "name": "arnabvn",
            "resource_group_name": "arnabrg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/virtualNetworks/arnabvn/subnets/arnab-subnet",
                "name": "arnab-subnet",
                "security_group": "/subscriptions/a7f71ad2-5a23-4abe-b4fb-0b25f7b6f954/resourceGroups/arnabrg/providers/Microsoft.Network/networkSecurityGroups/arnab-netsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.arnabrg"
          ]
        }
      ]
    }
  ]
}